--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
   "version": 2,
   "builds": [
-    {"src": "app.py", "use": "@vercel/python"}
+    {"src": "app.py", 
+      "use": "@vercel/python",
+      "config": {"maxLambdaSize": "50mb" }
+    }
    ],
 "routes": [
   {"src": "/(.*)", "dest": "app.py"}
