--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,11 @@
       "config": {"maxLambdaSize": "50mb" }
     }
    ],
+   "functions": {
+    "api/*.py": {
+      "runtime": "python3.9"
+    }
+  },
 "routes": [
   {"src": "/(.*)", "dest": "app.py"}
  ]
